# efm32-pacs

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  tools.py
.github/workflows/: pacs.yml
pacs/efm32gg/efm32gg280/: Cargo.toml  README.md
pacs/efm32gg/efm32gg280/src/: lib.rs
svd/EFM32G/: EFM32G200F64.svd  EFM32G210F128.svd  EFM32G222F128.svd  EFM32G230F128.svd  EFM32G232F128.svd  EFM32G280F128.svd  EFM32G290F128.svd  EFM32G800F128.svd  EFM32G840F128.svd  EFM32G842F128.svd  EFM32G880F128.svd  EFM32G890F128.svd
svd/EFM32GG/: EFM32GG230F1024.svd  EFM32GG232F1024.svd  EFM32GG280F1024.svd  EFM32GG290F1024.svd  EFM32GG295F1024.svd  EFM32GG330F1024.svd  EFM32GG332F1024.svd  EFM32GG380F1024.svd  EFM32GG390F1024.svd  EFM32GG395F1024.svd  EFM32GG840F1024.svd  EFM32GG842F1024.svd  EFM32GG880F1024.svd  EFM32GG890F1024.svd  EFM32GG895F1024.svd  EFM32GG900F1024.svd  EFM32GG940F1024.svd  EFM32GG942F1024.svd  EFM32GG980F1024.svd  EFM32GG990F1024.svd  EFM32GG995F1024.svd
svd/EFM32GG11B/: README.md
svd/EFM32HG/: EFM32HG108F64.svd  EFM32HG110F64.svd  EFM32HG210F64.svd  EFM32HG222F64.svd  EFM32HG308F64.svd  EFM32HG309F64.svd  EFM32HG310F64.svd  EFM32HG321F64.svd  EFM32HG322F64.svd  EFM32HG350F64.svd
svd/EFM32JG1B/: EFM32JG1B100F256IM32.svd  EFM32JG1B200F256IM48.svd
svd/EFM32PG1B/: EFM32PG1B100F256IM32.svd  EFM32PG1B200F256IM48.svd
svd/EFM32PG22/: EFM32PG22C200F512IM40.svd
svd/EFM32WG/: EFM32WG230F256.svd  EFM32WG232F256.svd  EFM32WG280F256.svd  EFM32WG290F256.svd  EFM32WG295F256.svd  EFM32WG330F256.svd  EFM32WG332F256.svd  EFM32WG360F256.svd  EFM32WG380F256.svd  (+13 more)
(+3377 files in other folders)
