[package]
name = "efm32gg280-pac"
description = "Peripheral access API for EFM32GG280 MCU (generated using svd2rust)"
version = "0.1.0"
authors = [ "Vladimir Petrigo <vladimir.petrigo@gmail.com>",]
license = "BSD-3-Clause"
keywords = [ "no-std", "arm", "cortex-m", "efm32",]
categories = [ "embedded", "hardware-support", "no-std",]
repository = "https://github.com/vpetrigo/efm32-pacs"
readme = "README.md"
edition = "2021"

[dependencies]
cortex-m = "~0.7"
vcell = "~0.1"

[features]
rt = [ "cortex-m-rt/device",]

[dependencies.cortex-m-rt]
version = "~0.7"
optional = true
